Implement Date Picker

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         app:timeTextSize="40dp" />
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginTop="32dp"
@@ -57,6 +58,32 @@
         app:layout_constraintTop_toBottomOf="@+id/countdownView">
 
     </ImageView>
+
+
+    <TextView
+        android:id="@+id/tvDatePicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/alata"
+        app:layout_constraintBottom_toTopOf="@+id/btnDatePicker"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+    </TextView>
+
+    <Button
+        android:id="@+id/btnDatePicker"
+        android:layout_width="297dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="60dp"
+        android:text="Pick a Date"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </Button>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
